Fix map thumbnail on mobile

--- a/nycommons/static/css/lot_detail.less
+++ b/nycommons/static/css/lot_detail.less
@@ -1,9 +1,11 @@
 #lot-detail-map {
     border: 2px solid #58595b;
     cursor: pointer;
+    float: left;
     height: 150px;
+    margin-left: 75px;
     margin-top: -100px;
-    width: 100%;
+    width: 20%;
     z-index: 500;
 }
 
